syntax = "proto3";

/**
 * basic
 */
enum ErrorCode {
    ERROR_CODE_SUCCESS = 0;
    ERROR_CODE_INVALID_ARGUMENT = -1;
    ERROR_CODE_QUEUE_FULL = -2;
}

message Field {
    uint32 type = 1;
    string term = 2;
    string valueStr = 3;
    int32 valueInt32 = 4;
    bool indexable = 5;
}

message Document {
    uint64 pk = 1;
    repeated Field fields = 2;
}

/**
 * request
 */
message RequestDocumentAdd {
    repeated Document documents = 1;
}

message RequestDocumentRemove {
    repeated uint64 pks = 1;
}

message RequestLookup {
    repeated string terms = 1;
    uint32 limit = 2;
}

/**
 * response
 */
message ResponseOperate {
    ErrorCode code = 1;
    string msg = 2;
}

message ResponseLookup {
    repeated Document documents = 1;
    ErrorCode code = 2;
    string msg = 3;
    uint32 total = 4;
}

